# blueprintos

./: .gitignore  LICENSE  Makefile  PROJECT_PLAN.md  README.md
.github/workflows/: ci.yml
blueprint-core/: Cargo.toml
blueprint-core/src/: main.rs
blueprint-core/src/bus/: mod.rs
blueprint-sts/: Cargo.toml
blueprint-sts/src/: main.rs
blueprint-ui/: app.js  index.html  styles.css
bpkg/: Cargo.toml
bpkg/src/: main.rs
distro/iso/grub/: grub.cfg
distro/kernel/configs/: munin_defconfig
distro/rootfs/overlay/etc/: muninos-release
distro/rootfs/overlay/etc/systemd/system/: munin-core.service  munin-sts.service  munin-ui.service
distro/scripts/: build-iso.sh  build-kernel.sh  build-munin-binaries.sh  build-rootfs.sh  ci-boot-smoke.sh  ci-build.sh  qemu-smoke-test.sh  run-qemu.sh  validate-image.sh
docs/: AGENTIC_ARCHITECTURE.md  BUILD.md
munin-core/: Cargo.toml
munin-core/src/: main.rs  server.rs
munin-sts/: Cargo.toml
munin-sts/src/: main.rs
munin-ui/: app.js  index.html  styles.css
munin-ui-service/: Cargo.toml
munin-ui-service/src/: main.rs
