[package]
name = "blueprint-core"
version = "0.1.0"
edition = "2021"
description = "BlueprintOS Core — Agent orchestration and message bus"

[[bin]]
name = "blueprint-core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-stream = "0.1"
async-channel = "2.2"
