[package]
name = "blueprint-sts"
version = "0.1.0"
edition = "2021"
description = "BlueprintOS Speech-to-Speech service with Qwen3 Omni"

[[bin]]
name = "blueprint-sts"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
