[package]
name = "munin-ui-service"
version = "0.1.0"
edition = "2021"
description = "MuninOS native UI service"

[[bin]]
name = "munin-ui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tiny_http = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
